--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@
    .hero-section {
     position: relative;
     background-image: url('./img/hero-image-mobile.webp');
-    background-size: cover;
+    background-size: contain;
     background-position: center;
   
     padding-top: 64px;
