--- a/styles.css
+++ b/styles.css
@@ -145,12 +145,6 @@ color: black;
   }
     /* ----------------------------///HERO-------------------------------- */
    
-.test-div {
-  height: 500px;
-  background-color: #d18b01;
-}
-
-
 
   /* Скрытые элементы */
   .nav-desktop-list {
@@ -170,10 +164,119 @@ color: black;
     display: none;
   }
 
-  
+  /* ---------------------------------СЕКЦИЯ УСЛУГИ------------------------------- */
+  .service-section {
+    padding: 53px 0 25px 0;
+  }
+.subtitle-text {
+ 
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 120%;
+  color: #000;
+}
+
+.service-wrapper {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.service-wrapper.expanded .service-description {
+  display: block;
+}
 
 
+.service-card {
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+padding: 10px 23px;
+width: 300px;
+height: 75px;
+background-color: #efa201;
 
+position: relative;
+padding-right: 30px;
+
+font-family: var(--font-family);
+font-weight: 500;
+font-size: 15px;
+line-height: 120%;
+color: #000;
+
+}
+
+.service-description {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease, padding 0.4s ease;
+  padding: 0 20px; /* добавим боковые отступы сразу */
+  background-color: #f5f5f5;
+  border-radius: 0 0 8px 8px;
+  color: #333;
+  font-size: 14px;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.service-wrapper.expanded .service-description {
+  max-height: 300px; /* подбери под длину текста, можно больше */
+  padding: 10px 20px;
+}
+.service-card {
+  cursor: pointer;
+  transition: border-radius 0.3s;
+  width: 320px;
+}
+
+.service-wrapper.expanded .service-card {
+  border-radius: 8px 8px 0 0;
+}
+
+.service-card::after {
+  content: "+";
+  font-size: 34px;
+  font-weight: bold;
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: #333;
+  cursor: pointer;
+}
+
+.service-wrapper.expanded .service-card::after {
+  content: "–";
+}
+
+
+  /* ---------------------------------///СЕКЦИЯ УСЛУГИ------------------------------- */
+
+
+/* ------------------------------------СЕКЦИЯ О НАС-------------------------------------- */
+.section-o-nas {
+padding: 25px 0;
+}
+
+.o-nas-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.o-nas-picture {
+  margin: 0 auto;
+}
+
+.o-nas-dscr{
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+/* ------------------------------------///СЕКЦИЯ О НАС-------------------------------------- */
 
 
 
