--- a/styles.css
+++ b/styles.css
@@ -381,16 +381,12 @@ padding: 25px 0;
   overflow: hidden;
   background-color: black;
 }
-.mustang-box {
-  width: 390px;
-  height: 924px;
-}
 
 .mustang-picture {
   position: absolute;
   right: -5%;
-  bottom: 12%;
-height: 70%;
+  bottom: 20%;
+height: 60%;
 }
 
 .light {
@@ -398,9 +394,18 @@ height: 70%;
 fill: linear-gradient(182deg, #fff 0%, rgba(255, 255, 255, 0.33) 36%, rgba(255, 255, 255, 0.05) 63.5%, rgba(255, 255, 255, 0) 100%);
 filter: blur(5.443979263305664px);
   position: absolute;
-  right: 10px; /* Прижимаем к правому краю */
+  right: -2%; /* Прижимаем к правому краю */
   top: 0;
   height: auto;
+}
+
+.red-light {
+  position: absolute;
+  right: -2%;
+  top: 73%;
+  border-radius: 0px;
+fill: linear-gradient(180deg, #ff200f 0%, rgba(153, 19, 9, 0) 100%);
+filter: blur(2.721989631652832px);
 }
 
 .spivpracia-container {
