--- a/styles.css
+++ b/styles.css
@@ -396,7 +396,7 @@ filter: blur(5.443979263305664px);
   position: absolute;
   right: -2%; /* Прижимаем к правому краю */
   top: 0;
-  height: auto;
+
 }
 
 .red-light {
@@ -408,8 +408,14 @@ fill: linear-gradient(180deg, #ff200f 0%, rgba(153, 19, 9, 0) 100%);
 filter: blur(2.721989631652832px);
 }
 
+.spivpracia-wrapper {
+  display: flex;
+  gap: 30px;
+padding: 22px 0 63px 0;
+}
+
 .spivpracia-container {
-  padding: 30px 40px 87px 40px;
+  padding: 30px 40px 60px 40px;
 }
 
 .subtitle-spivpracia {
@@ -425,7 +431,7 @@ color: white;
   gap: 80px;
   position: relative;
   margin-left: 15px;
-  margin-top: 45px;
+margin-top: 20px;
   width: 100px;
 }
 
@@ -475,6 +481,40 @@ color: white;
     transparent 12px
   );
   z-index: 0;
+}
+
+.spivpracia-text {
+  width: 200px;
+  height: 400px;
+}
+
+.spivpracia-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.spivpracia-list-item {
+  width: 160px;
+  height: 108px;
+  
+}
+
+.spivpracia-dscr {
+ 
+font-weight: 600;
+font-size: 13px;
+line-height: 140%;
+color:white;
+}
+
+.spivpracia-consultacia-btn {
+  border-radius: 5px;
+padding: 13px 26px;
+width: 338px;
+height: 55px;
+
+background: #efa201;
 }
 
 
