--- a/styles.css
+++ b/styles.css
@@ -515,6 +515,13 @@ width: 338px;
 height: 55px;
 
 background: #efa201;
+
+
+font-weight: 600;
+font-size: 15px;
+line-height: 100%;
+text-align: center;
+color: black;
 }
 
 
