--- a/styles.css
+++ b/styles.css
@@ -513,7 +513,6 @@ color:white;
 padding: 13px 26px;
 width: 338px;
 height: 55px;
-
 background: #efa201;
 
 
@@ -527,6 +526,85 @@ color: black;
 
 /* -------------------------------------///СПІВПРАЦЯ----------------------------------------------- */
 
+
+/* ---------------------------------------ТАРИФЫ------------------------------------------------- */
+.section-trifi {
+  padding-top: 64px;
+}
+
+.subtitle-text-tarifi {
+ margin-bottom: 15px;
+font-weight: 700;
+font-size: 32px;
+line-height: 110%;
+text-align: center;
+color: black;
+}
+
+.tarifi-dscr {
+ text-align: center;
+
+font-weight: 400;
+font-size: 16px;
+line-height: 140%;
+text-align: center;
+color: #fa201;
+}
+
+.tarifi-box {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+margin: 15px 0;
+}
+
+.tarifi-card {
+  box-sizing: border-box;
+display: flex;
+gap: 23px;
+align-items: center;
+border-radius: 4px;
+padding: 14px 23px;
+width: 342px;
+background: #f9f2e5;
+}
+
+.tarifi-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60px;
+  height: 60px;
+  border-radius: 100%;
+  background: #efa201;
+}
+
+.tarifi-text {
+  width: 215px;
+font-weight: 700;
+font-size: 16px;
+line-height: 140%;
+color: black;
+}
+
+.tarifi-btn {
+font-weight: 600;
+font-size: 16px;
+line-height: 100%;
+letter-spacing: -0.02em;
+text-align: center;
+color: black;
+  border-radius: 4px;
+padding: 19px 37px;
+width: 338px;
+height: 55px;
+background: #efa201;
+margin-top: 20px;
+}
+
+
+
+/* ---------------------------------------///ТАРИФЫ------------------------------------------------- */
 
   /* Планшеты + нетбуки */
   @media screen and (min-width: 1080px) {
