--- a/styles.css
+++ b/styles.css
@@ -530,6 +530,7 @@ color: black;
 /* ---------------------------------------ТАРИФЫ------------------------------------------------- */
 .section-trifi {
   padding-top: 64px;
+  padding-bottom: 15px;
 }
 
 .subtitle-text-tarifi {
@@ -602,7 +603,61 @@ background: #efa201;
 margin-top: 20px;
 }
 
+/* -----------------------------СЕКЦИЯ ПРО CRM------------------------------------------------- */
 
+.section-crm {
+  padding: 15px 0;
+}
+
+.subtitle-crm {
+  font-weight: 700;
+  font-size: 32px;
+  line-height: 110%;
+  color: black;
+  margin-bottom: 12px;
+}
+
+.description-crm {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: #777;
+  margin-bottom: 20px;
+}
+
+.crm-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.crm-box {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  border-radius: 8px;
+padding: 30px;
+background: #f9f2e5;
+}
+
+.number-crm {
+font-weight: 700;
+font-size: 40px;
+line-height: 140%;
+color: #efa201;
+}
+
+.crm-text-box {
+  display: flex;
+  align-items: center;
+font-weight: 700;
+font-size: 16px;
+line-height: 140%;
+color: black;
+
+}
+
+/* -----------------------------///СЕКЦИЯ ПРО CRM------------------------------------------------- */
 
 /* ---------------------------------------///ТАРИФЫ------------------------------------------------- */
 
