--- a/styles.css
+++ b/styles.css
@@ -603,6 +603,8 @@ background: #efa201;
 margin-top: 20px;
 }
 
+/* ---------------------------------------///ТАРИФЫ------------------------------------------------- */
+
 /* -----------------------------СЕКЦИЯ ПРО CRM------------------------------------------------- */
 
 .section-crm {
@@ -755,8 +757,142 @@ color: white;
 /* ------------------------------------///ФОРМА ЗАЯВКИ------------------------------------------------- */
 
 
+/* -------------------------------------ФУТЕР--------------------------------------------------------- */
 
-/* ---------------------------------------///ТАРИФЫ------------------------------------------------- */
+.section-footer {
+padding-top: 80px;
+padding-bottom: 80px;
+width: 390px;
+height: 1037px;
+background: black;
+}
+
+.footer-wrapp {
+  display: flex;
+  flex-direction: column;
+  gap: 53px;
+}
+
+.footer-lang {
+display: flex;
+gap: 10px;
+
+}
+
+.ukr {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 53px;
+  width: 115px;
+  height: 35px;
+  background: #efa201;
+  border: 0.89px solid #efa201;
+  font-family: var(--font-family);
+font-weight: 400;
+font-size: 17px;
+line-height: 120%;
+color: black;
+}
+
+.usa {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 53px;
+  width: 115px;
+  height: 35px;
+  border: 0.89px solid #efa201;
+  font-family: var(--font-family);
+font-weight: 400;
+font-size: 17px;
+line-height: 120%;
+color: white;
+}
+
+.footer-subtitle {
+font-weight: 700;
+font-size: 53px;
+line-height: 120%;
+color: white;
+}
+
+.footer-social {
+  display: flex;
+  gap: 22px;
+}
+
+.contact-footer-list {
+  display: flex;
+  flex-direction: column;
+  gap: 35px;
+}
+
+.contact-footer-label {
+  display: inline-block;
+font-weight: 500;
+font-size: 14px;
+line-height: 120%;
+color:  #777;
+margin-bottom: 9px;
+}
+
+.contact-footer-info {
+
+font-weight: 500;
+font-size: 21px;
+line-height: 120%;
+letter-spacing: -0.02em;
+color: white;
+}
+
+.footer-btn {
+  border-radius: 7px;
+  padding: 14px 35px;
+  width: 224px;
+  height: 51px;
+  background: #efa201;
+  
+font-weight: 600;
+font-size: 17px;
+line-height: 100%;
+letter-spacing: -0.02em;
+color: black;
+}
+
+.deepest-box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 170px auto 0;
+  border-top: 0.89px solid #767676;
+padding: 17px 8px;
+height: 41px;
+}
+
+.deeppest-info-1 {
+  font-weight: 400;
+font-size: 5px;
+line-height: 120%;
+color: #d8d8d8;
+}
+
+.deepest-info-2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+font-weight: 400;
+font-size: 5px;
+line-height: 120%;
+color: #d8d8d8;
+}
+
+/* -------------------------------------///ФУТЕР--------------------------------------------------------- */
+
+
+/* ---------------------------------------///ТАРИФЫ-ПЛАНШЕТ------------------------------------------------- */
 
   /* Планшеты + нетбуки */
   @media screen and (min-width: 1080px) {
