--- a/styles.css
+++ b/styles.css
@@ -878,6 +878,7 @@ color: #d8d8d8;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 17px;
 font-weight: 400;
 font-size: 5px;
 line-height: 120%;
