--- a/reset.css
+++ b/reset.css
@@ -1,3 +1,31 @@
+
+:root {
+	--efa201: #efa201;
+	--gray: #efefef;
+	--white: #fff;
+	--black: #000;
+	--f9f2e5: #f9f2e5;
+	--dbd3c2: #dbd3c2;
+	--777777: #777;
+	--d8d8d8: #d8d8d8;
+	--eeeeee: #eee;
+	--ffffff: #fff;
+	--000000-400: rgba(0, 0, 0, 0.4);
+	--1a1a1a: #1a1a1a;
+	--ff0000: #f00;
+	--9d9d9d: #9d9d9d;
+	--background-for-popups: rgba(0, 0, 0, 0.6);
+	--dedede---1---inside: #dedede;
+	--dedede-1-inside: #dedede;
+	--footer-line-|-767676---1---center: #767676;
+}
+
+:root {
+  --font-family: "Roboto", sans-serif;
+  --second-family: "Ermilov", sans-serif;
+  --third-family: "Codec Pro", sans-serif;
+}
+
 /* Reset styles */
 html {
     scroll-behavior: smooth;
