--- a/styles.css
+++ b/styles.css
@@ -175,6 +175,10 @@ transition: background-color 0.3s ease;
 
   }
 
+  .light-desctop {
+    display: none;
+  }
+
   /* ---------------------------------СЕКЦИЯ УСЛУГИ------------------------------- */
   .service-section {
     padding: 53px 0 25px 0;
@@ -459,9 +463,8 @@ color: white;
   flex-direction: column;
   gap: 80px;
   position: relative;
-  margin-left: 15px;
-margin-top: 20px;
   width: 100px;
+  padding-top: 20px;
 }
 
 .number-line {
@@ -551,6 +554,125 @@ text-align: center;
 color: black;
 }
 
+/* FULL HD */
+
+@media screen and (min-width: 1881px) {
+  .section-spivpracia {
+    padding-top: 94px;
+    padding-bottom: 95px;
+  }
+
+  .mustang-picture {
+    position: absolute;
+    top: 16%;
+  height: 70%;
+  } 
+
+  .desktop-light {
+    border-radius: 0px;
+    position: absolute;
+fill: linear-gradient(182deg, #fff 0%, rgba(255, 255, 255, 0.33) 36%, rgba(255, 255, 255, 0.05) 63.5%, rgba(255, 255, 255, 0) 100%);
+filter: blur(22px);
+right: -14%;
+  
+  }
+  
+.subtitle-spivpracia {
+  font-family: var(--second-family);
+font-weight: 700;
+font-size: 68px;
+line-height: 70%;
+color: var(--white);
+width: 1000px;
+}
+
+.spivpracia-wrapper{
+ gap: 100px;
+padding-top: 140px;
+padding-bottom: 220px;
+}
+
+.numbers-box {
+  width: 269px;
+  gap: 270px;
+ 
+}
+
+
+.number-round {
+  width: 141px;
+height: 141px;
+font-family: var(--font-family);
+font-weight: 900;
+font-size: 56px;
+line-height: 140%;
+text-align: center;
+color: var(--white);
+}
+
+.spivpracia-list {
+  gap: 310px;
+}
+
+.width-1 {
+  width: 1250px;
+}
+
+.width-2 {
+  width: 1150px;
+}
+
+.width-3 {
+  width: 1000px;
+}
+
+.width-4 {
+  width: 900px;
+}
+
+
+
+.spivpracia-dscr {
+  font-family: var(--font-family);
+font-weight: 600;
+font-size: 40px;
+line-height: 140%;
+color: var(--white);
+}
+
+
+
+.horizontal-line {
+  width: 127px;
+  height: 4px;
+  background-color: #efa201;
+}
+
+/* В медиазапросе */
+.numbers-box::before {
+
+  left: 70px;
+}
+
+
+
+.spivpracia-consultacia-btn {
+  margin: 0;
+  border-radius: 17px;
+  padding: 43px 86px;
+  width: 759px;
+  font-family: var(--font-family);
+font-weight: 600;
+font-size: 34px;
+line-height: 100%;
+text-align: center;
+color: var(--black);
+}
+
+
+}
+
+/* ///FULL HD */
 
 /* -------------------------------------///СПІВПРАЦЯ----------------------------------------------- */
 
@@ -596,6 +718,7 @@ border-radius: 4px;
 padding: 14px 23px;
 width: 342px;
 background: #f9f2e5;
+margin: 0 auto;
 }
 
 .tarifi-icon {
@@ -630,6 +753,41 @@ padding: 19px 37px;
 background: #efa201;
 margin-top: 20px;
 }
+
+
+/* FULL HD */
+
+@media screen and (min-width: 1881px) {
+
+  .section-trifi {
+    padding: 0px 190px;
+width: 1680px;
+  }
+
+  .subtitle-text-tarifi {
+    font-family: var(--second-family);
+font-weight: 700;
+font-size: 60px;
+line-height: 110%;
+text-align: center;
+color: var(--black);
+  }
+
+  .tarifi-dscr {
+    font-family: var(--font-family);
+font-weight: 400;
+font-size: 32px;
+line-height: 140%;
+text-align: center;
+color: #777;
+  }
+
+
+
+
+}
+
+/* ///FULL HD */
 
 /* ---------------------------------------///ТАРИФЫ------------------------------------------------- */
 
@@ -919,8 +1077,8 @@ color: #d8d8d8;
 
  
   
- /* -----------------------------------------------ДЕСКТОПЫ MEDIA------------------------------------------ */
-  @media screen and (min-width: 1200px) {
+ /* -----------------------------------------------FULL HD MEDIA------------------------------------------ */
+  @media screen and (min-width: 1881px) {
     .container {
       min-width:1024 ;
       max-width: 1680px;
@@ -940,7 +1098,7 @@ color: #d8d8d8;
         line-height: 90%;
       }
    
-    /* --------------------------------ДЕСКТОП HERO------------------------------ */
+    /* --------------------------------FULL HD HERO------------------------------ */
 
     .burger {
       display: none;
@@ -1015,9 +1173,9 @@ color: #d8d8d8;
           margin: 0 auto;
    }
    
-/* --------------------------------///ДЕСКТОП HERO------------------------------ */
+/* --------------------------------///FULL HD HERO------------------------------ */
 
-/* -----------------------------------ДЕСКТОП УСЛУГИ----------------------------- */
+/* -----------------------------------FULL HD  УСЛУГИ----------------------------- */
  
 .service-section {
   padding: 150px 0;
@@ -1053,10 +1211,10 @@ color: var(--black);
 width: 100%;
 }
 
-/* -----------------------------------///ДЕСКТОП УСЛУГИ----------------------------- */
+/* -----------------------------------///FULL HD УСЛУГИ----------------------------- */
 
 
-/* ---------------------------------ДЕСКТОП О НАС------------------------------------- */
+/* ---------------------------------FULL HD О НАС------------------------------------- */
 
 .o-nas-text {
   font-family: var(--font-family);
@@ -1074,9 +1232,9 @@ line-height: 110%;
 color: var(--black);
 }
 
-/* ---------------------------------///ДЕСКТОП О НАС------------------------------------- */
+/* ---------------------------------///FULL HD  О НАС------------------------------------- */
 
-/* --------------------------------ДЕСКТОПЫ ПЕРЕВАГИ-------------------------------------- */
+/* -------------------------------FULL HD  ПЕРЕВАГИ-------------------------------------- */
 
 .subtitle-perevagi {
   font-family: var(--second-family);
@@ -1174,11 +1332,12 @@ background: var(--black);
 }
 
 
-/* --------------------------------///ДЕСКТОПЫ ПЕРЕВАГИ-------------------------------------- */
+/* --------------------------------///FULL HD  ПЕРЕВАГИ-------------------------------------- */
 
- }   /* Закрывающая кавычка десктопа */
 
-   /* -----------------------------------------------///ДЕСКТОПЫ------------------------------------------ */
+}   /* Закрывающая кавычка ULL HD */
+
+   /* -----------------------------------------------///FULL HD ------------------------------------------ */
 
   
     /* -------------------------------------------------------///АДАПТИВКА----------------------------------------------------------- */
