--- a/styles.css
+++ b/styles.css
@@ -413,10 +413,14 @@ font-size: 16px;
 
 /* -------------------------------------СПІВПРАЦЯ----------------------------------------------- */
 
+
 .section-spivpracia {
   position: relative;
   overflow: hidden;
   background-color: black;
+}
+.desktop-light {
+  display: block;
 }
 
 .mustang-picture {
