--- a/styles.css
+++ b/styles.css
@@ -175,12 +175,13 @@ transition: background-color 0.3s ease;
 
   }
 
-  
-
  .desktop-light {
   display: none;
  }
 
+ .red-light-desktop {
+  display: none;
+ }
 
 
   /* ---------------------------------СЕКЦИЯ УСЛУГИ------------------------------- */
@@ -539,7 +540,6 @@ color: white;
 }
 
 .spivpracia-dscr {
- 
 font-weight: 600;
 font-size: 13px;
 line-height: 140%;
@@ -562,7 +562,7 @@ color: black;
 
 /* ноуты співпраця */
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 1280px) {
   
   .subtitle-spivpracia {
     margin-bottom: 20px;
@@ -615,10 +615,21 @@ color: black;
     padding-bottom: 95px;
   }
 
+  .red-light {
+ display: none;
+  }
+
+  .red-light-desktop {
+    display: block;
+    position: relative;
+    left: 90%;
+    top: 2020px; 
+   }
+
   .mustang-picture {
     position: absolute;
-    top: 16%;
-  height: 70%;
+    top: 18%;
+  height: 60%;
   } 
 
   .desktop-light {
@@ -666,11 +677,12 @@ color: var(--white);
 
 .spivpracia-list {
   gap: 310px;
+  margin-top: 30px;
 }
 
 
 .width-1 {
-  width: 1250px;
+  width: 1200px;
 }
 
 .width-2 {
@@ -686,14 +698,10 @@ color: var(--white);
 }
 
 
-
-
-
-
 .spivpracia-dscr {
   font-family: var(--font-family);
 font-weight: 600;
-font-size: 40px;
+font-size: 30px;
 line-height: 140%;
 color: var(--white);
 }
@@ -818,7 +826,7 @@ margin-top: 20px;
 @media screen and (min-width: 1440px) {
 
   .section-trifi {
-    padding: 0px 190px;
+    padding: 60px 190px;
 width: 1680px;
   }
 
@@ -1136,7 +1144,7 @@ color: #d8d8d8;
  
   
  /* -----------------------------------------------FULL HD MEDIA------------------------------------------ */
-  @media screen and (min-width: 1440px) {
+  @media screen and (min-width: 1280px) {
     .container {
       min-width:1440 ;
       max-width: 1680px;
