--- a/styles.css
+++ b/styles.css
@@ -826,8 +826,12 @@ margin-top: 20px;
 @media screen and (min-width: 1440px) {
 
   .section-trifi {
-    padding: 60px 190px;
-width: 1680px;
+ padding: 140px 0;
+
+  }
+
+  .width-box-tarifi {
+    width: 1444px;
   }
 
   .subtitle-text-tarifi {
@@ -837,19 +841,60 @@ font-size: 60px;
 line-height: 110%;
 text-align: center;
 color: var(--black);
+margin-bottom: 30px;
   }
 
   .tarifi-dscr {
+   width: 1144px;
+   margin: 0 auto;
     font-family: var(--font-family);
 font-weight: 400;
 font-size: 32px;
 line-height: 140%;
 text-align: center;
 color: #777;
+
   }
 
+  .tarifi-box {
+    margin-top: 60px;
+    margin-bottom: 65px;
+  
+  }
 
+  .tarifi-card {
+   
+width: 1144px;
+    border-radius: 8px;
+padding: 30px 50px;
 
+gap: 50px;
+  }
+
+.tarifi-text {
+  
+  width: 100%;
+  font-family: var(--font-family);
+font-weight: 700;
+font-size: 32px;
+line-height: 140%;
+color: var(--black);
+}
+
+.tarifi-btn {
+  border-radius: 8px;
+padding: 42px 80px;
+width: 647px;
+margin: 0 auto;
+font-family: var(--font-family);
+font-weight: 600;
+font-size: 24px;
+line-height: 100%;
+letter-spacing: -0.02em;
+text-align: center;
+color: var(--black);
+margin-top: 65px;
+}
 
 }
 
@@ -1146,8 +1191,7 @@ color: #d8d8d8;
  /* -----------------------------------------------FULL HD MEDIA------------------------------------------ */
   @media screen and (min-width: 1280px) {
     .container {
-      min-width:1440 ;
-      max-width: 1680px;
+      max-width: 1920px;
       padding: 0 120px;
       margin: 0 auto;
     }
